# template_c_strings

./: .gitignore  CMakeLists.txt  README.md  apt_packages.txt  compile.sh  feedback.md  task.md
.github/workflows/: arch.yml  ubuntu.yml  windows.yml
c_str_lib/: c_string.c  c_string.h
c_string_library/: c_strings_lib.h
cmake/: config.cmake
inc/: README.md
lib/: c_string.c  c_strings_lib.c  c_strings_lib.h
media/: README.md
src/: README.md  main.c
